manifests/lkapi/lkapi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lkapi
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: lkapi
    name: lkapi
    namespace: lkapi
spec:
    replicas: 4
    selector:
        matchLabels:
            app: lkapi
    template:
        metadata:
            labels:
                app: lkapi
        spec:
            containers:
            - image: michaelpeterswa/lkapi:latest
              imagePullPolicy: IfNotPresent
              name: lkapi
              ports:
              - containerPort: 6969
                protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lkapi
  namespace: lkapi
  # annotations:
  #   metallb.universe.tf/address-pool: main-pool
  labels:
    app: lkapi
    service: lkapi
spec:
  ports:
  - name: http-lkapi
    port: 80
    targetPort: 6969
  selector:
    app: lkapi
  # type: LoadBalancer
