manifests/lkapi/lkapi-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lkapi-gateway
  namespace: lkapi
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lkapi
  namespace: lkapi
spec:
  hosts:
  - "*"
  gateways:
  - lkapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: lkapi
        port:
          number: 80
